--- a/src/app/components/swag-modal/swag-modal.page.html
+++ b/src/app/components/swag-modal/swag-modal.page.html
@@ -51,8 +51,229 @@
       </ion-item>
       <ion-item>
         <ion-label>Country</ion-label>
-        <ion-input placeholder="United States" [(ngModel)]="hubspotData.country_pl_" name="country" #country="ngModel" required></ion-input>
+        <ion-select [(ngModel)]="hubspotData.country_pl_" value="United States" name="country" #country="ngModel" okText="Okay" cancelText="Dismiss" required>
+          <ion-select-option value="United States">United States</ion-select-option>
+          <ion-select-option value="Aland Islands">Aland Islands</ion-select-option>
+          <ion-select-option value="Angola">Angola</ion-select-option>
+          <ion-select-option value="Anguilla">Anguilla</ion-select-option>
+          <ion-select-option value="Antarctica">Antarctica</ion-select-option>
+          <ion-select-option value="Antigua & Barbuda">Antigua & Barbuda</ion-select-option>
+          <ion-select-option value="Argentina">Argentina</ion-select-option>
+          <ion-select-option value="Armenia">Armenia</ion-select-option>
+          <ion-select-option value="Aruba">Aruba</ion-select-option>
+          <ion-select-option value="Australia">Australia</ion-select-option>
+          <ion-select-option value="Austria">Austria</ion-select-option>
+          <ion-select-option value="Azerbaijan">Azerbaijan</ion-select-option>
+          <ion-select-option value="Baden">Baden</ion-select-option>
+          <ion-select-option value="Bahamas">Bahamas</ion-select-option>
+          <ion-select-option value="Bahrain">Bahrain</ion-select-option>
+          <ion-select-option value="Bangladesh">Bangladesh</ion-select-option>
+          <ion-select-option value="Barbados">Barbados</ion-select-option>
+          <ion-select-option value="Belarus">Belarus</ion-select-option>
+          <ion-select-option value="Belgium">Belgium</ion-select-option>
+          <ion-select-option value="Belize">Belize</ion-select-option>
+          <ion-select-option value="Benin">Benin</ion-select-option>
+          <ion-select-option value="Bhutan">Bhutan</ion-select-option>
+          <ion-select-option value="Bolivia">Bolivia</ion-select-option>
+          <ion-select-option value="Bosnia & Herzegovina">Bosnia & Herzegovina</ion-select-option>
+          <ion-select-option value="Botswana">Botswana</ion-select-option>
+          <ion-select-option value="British Indian Ocean Territory">British Indian Ocean Territory</ion-select-option>
+          <ion-select-option value="Brazil">Brazil</ion-select-option>
+          <ion-select-option value="Brunei">Brunei</ion-select-option>
+          <ion-select-option value="Bulgaria">Bulgaria</ion-select-option>
+          <ion-select-option value="Burkina Faso">Burkina Faso</ion-select-option>
+          <ion-select-option value="Burundi">Burundi</ion-select-option>
+          <ion-select-option value="Cabo Verde">Cabo Verde</ion-select-option>
+          <ion-select-option value="Cambodia">Cambodia</ion-select-option>
+          <ion-select-option value="Cameroon">Cameroon</ion-select-option>
+          <ion-select-option value="Canada">Canada</ion-select-option>
+          <ion-select-option value="Cape Verde">Cape Verde</ion-select-option>
+          <ion-select-option value="Cayman Islands">Cayman Islands</ion-select-option>
+          <ion-select-option value="Central African Republic">Central African Republic</ion-select-option>
+          <ion-select-option value="Chad">Chad</ion-select-option>
+          <ion-select-option value="Chile">Chile</ion-select-option>
+          <ion-select-option value="China">China</ion-select-option>
+          <ion-select-option value="Christmas Island">Christmas Island</ion-select-option>
+          <ion-select-option value="Cocos (Keeling) Islands">Cocos (Keeling) Islands</ion-select-option>
+          <ion-select-option value="Colombia">Colombia</ion-select-option>
+          <ion-select-option value="Comoros">Comoros</ion-select-option>
+          <ion-select-option value="Cook Islands">Cook Islands</ion-select-option>
+          <ion-select-option value="Costa Rica">Costa Rica</ion-select-option>
+          <ion-select-option value="Croatia">Croatia</ion-select-option>
+          <ion-select-option value="Cuba">Cuba</ion-select-option>
+          <ion-select-option value="Cyprus">Cyprus</ion-select-option>
+          <ion-select-option value="Czech Republic">Czech Republic</ion-select-option>
+          <ion-select-option value="Côte d'Ivoire">Côte d'Ivoire</ion-select-option>
+          <ion-select-option value="Democratic Republic of the Congo">Democratic Republic of the Congo</ion-select-option>
+          <ion-select-option value="Denmark">Denmark</ion-select-option>
+          <ion-select-option value="Djibouti">Djibouti</ion-select-option>
+          <ion-select-option value="Dominica">Dominica</ion-select-option>
+          <ion-select-option value="Dominican Republic">Dominican Republic</ion-select-option>
+          <ion-select-option value="East Timor">test</ion-select-option>
+          <ion-select-option value="Ecuador">test</ion-select-option>
+          <ion-select-option value="Egypt">test</ion-select-option>
+          <ion-select-option value="El Salvador">test</ion-select-option>
+          <ion-select-option value="Equatorial Guinea">test</ion-select-option>
+          <ion-select-option value="Eritrea">test</ion-select-option>
+          <ion-select-option value="Estonia">test</ion-select-option>
+          <ion-select-option value="Ethiopia">test</ion-select-option>
+          <ion-select-option value="Fiji">test</ion-select-option>
+          <ion-select-option value="Finland">test</ion-select-option>
+          <ion-select-option value="France">test</ion-select-option>
+          <ion-select-option value="Gabon">test</ion-select-option>
+          <ion-select-option value="Gambia">test</ion-select-option>
+          <ion-select-option value="Georgia">test</ion-select-option>
+          <ion-select-option value="Germany">test</ion-select-option>
+          <ion-select-option value="Ghana">test</ion-select-option>
+          <ion-select-option value="Greece">test</ion-select-option>
+          <ion-select-option value="Grenada">test</ion-select-option>
+          <ion-select-option value="Guatemala">test</ion-select-option>
+          <ion-select-option value="Guinea">test</ion-select-option>
+          <ion-select-option value="Guinea-Bissau">test</ion-select-option>
+          <ion-select-option value="Guyana">test</ion-select-option>
+          <ion-select-option value="Haiti">test</ion-select-option>
+          <ion-select-option value="Honduras">test</ion-select-option>
+          <ion-select-option value="Hungary">test</ion-select-option>
+          <ion-select-option value="Iceland">test</ion-select-option>
+          <ion-select-option value="India">test</ion-select-option>
+          <ion-select-option value="Indonesia">test</ion-select-option>
+          <ion-select-option value="Iran">test</ion-select-option>
+          <ion-select-option value="Iraq">test</ion-select-option>
+          <ion-select-option value="Ireland {Republic}">test</ion-select-option>
+          <ion-select-option value="Israel">test</ion-select-option>
+          <ion-select-option value="Italy">test</ion-select-option>
+          <ion-select-option value="Ivory Coast">test</ion-select-option>
+          <ion-select-option value="Jamaica">test</ion-select-option>
+          <ion-select-option value="Japan">test</ion-select-option>
+          <ion-select-option value="Jordan">test</ion-select-option>
+          <ion-select-option value="Kazakhstan">test</ion-select-option>
+          <ion-select-option value="Kenya">test</ion-select-option>
+          <ion-select-option value="Kiribati">test</ion-select-option>
+          <ion-select-option value="Korea North">test</ion-select-option>
+          <ion-select-option value="Korea South">test</ion-select-option>
+          <ion-select-option value="Kosovo">test</ion-select-option>
+          <ion-select-option value="Kuwait">test</ion-select-option>
+          <ion-select-option value="Kyrgyzstan">test</ion-select-option>
+          <ion-select-option value="Laos">test</ion-select-option>
+          <ion-select-option value="Latvia">test</ion-select-option>
+          <ion-select-option value="Lebanon">test</ion-select-option>
+          <ion-select-option value="Lesotho">test</ion-select-option>
+          <ion-select-option value="Liberia">test</ion-select-option>
+          <ion-select-option value="Libya">test</ion-select-option>
+          <ion-select-option value="Liechtenstein">test</ion-select-option>
+          <ion-select-option value="Lithuania">test</ion-select-option>
+          <ion-select-option value="Luxembourg">test</ion-select-option>
+          <ion-select-option value="Macedonia">test</ion-select-option>
+          <ion-select-option value="Madagascar">test</ion-select-option>
+          <ion-select-option value="Malawi">test</ion-select-option>
+          <ion-select-option value="Malaysia">test</ion-select-option>
+          <ion-select-option value="Maldives">test</ion-select-option>
+          <ion-select-option value="Mali">test</ion-select-option>
+          <ion-select-option value="Malta">test</ion-select-option>
+          <ion-select-option value="Marshall Islands">test</ion-select-option>
+          <ion-select-option value="Mauritania">test</ion-select-option>
+          <ion-select-option value="Mauritius">test</ion-select-option>
+          <ion-select-option value="Mexico">test</ion-select-option>
+          <ion-select-option value="Micronesia">test</ion-select-option>
+          <ion-select-option value="Moldova">test</ion-select-option>
+          <ion-select-option value="Monaco">test</ion-select-option>
+          <ion-select-option value="Mongolia">test</ion-select-option>
+          <ion-select-option value="Montenegro">test</ion-select-option>
+          <ion-select-option value="Morocco">test</ion-select-option>
+          <ion-select-option value="Mozambique">test</ion-select-option>
+          <ion-select-option value="Myanmar, {Burma}">test</ion-select-option>
+          <ion-select-option value="Namibia">test</ion-select-option>
+          <ion-select-option value="Nauru">test</ion-select-option>
+          <ion-select-option value="Nepal">test</ion-select-option>
+          <ion-select-option value="Netherlands">test</ion-select-option>
+          <ion-select-option value="New Zealand">test</ion-select-option>
+          <ion-select-option value="Nicaragua">test</ion-select-option>
+          <ion-select-option value="Niger">test</ion-select-option>
+          <ion-select-option value="Nigeria">test</ion-select-option>
+          <ion-select-option value="Norway">test</ion-select-option>
+          <ion-select-option value="Oman">test</ion-select-option>
+          <ion-select-option value="Pakistan">test</ion-select-option>
+          <ion-select-option value="Palau">test</ion-select-option>
+          <ion-select-option value="Panama">test</ion-select-option>
+          <ion-select-option value="Papua New Guinea">test</ion-select-option>
+          <ion-select-option value="Paraguay">test</ion-select-option>
+          <ion-select-option value="Peru">test</ion-select-option>
+          <ion-select-option value="Philippines">test</ion-select-option>
+          <ion-select-option value="Poland">test</ion-select-option>
+          <ion-select-option value="Portugal">test</ion-select-option>
+          <ion-select-option value="Qatar">test</ion-select-option>
+          <ion-select-option value="Romania">test</ion-select-option>
+          <ion-select-option value="Russian Federation">test</ion-select-option>
+          <ion-select-option value="Rwanda">test</ion-select-option>
+          <ion-select-option value="St Kitts & Nevis">test</ion-select-option>
+          <ion-select-option value="St Lucia">test</ion-select-option>
+          <ion-select-option value="Saint Vincent & the Grenadines">test</ion-select-option>
+          <ion-select-option value="Samoa">test</ion-select-option>
+          <ion-select-option value="San Marino">test</ion-select-option>
+          <ion-select-option value="Sao Tome & Principe">test</ion-select-option>
+          <ion-select-option value="Saudi Arabia">test</ion-select-option>
+          <ion-select-option value="Senegal">test</ion-select-option>
+          <ion-select-option value="Serbia">test</ion-select-option>
+          <ion-select-option value="Seychelles">test</ion-select-option>
+          <ion-select-option value="Sierra Leone">test</ion-select-option>
+          <ion-select-option value="Singapore">test</ion-select-option>
+          <ion-select-option value="Slovakia">test</ion-select-option>
+          <ion-select-option value="Slovenia">test</ion-select-option>
+          <ion-select-option value="Solomon Islands">test</ion-select-option>
+          <ion-select-option value="Somalia">test</ion-select-option>
+          <ion-select-option value="South Africa">test</ion-select-option>
+          <ion-select-option value="South Sudan">test</ion-select-option>
+          <ion-select-option value="Spain">test</ion-select-option>
+          <ion-select-option value="Sri Lanka">test</ion-select-option>
+          <ion-select-option value="Sudan">test</ion-select-option>
+          <ion-select-option value="Suriname">test</ion-select-option>
+          <ion-select-option value="Swaziland">test</ion-select-option>
+          <ion-select-option value="Sweden">test</ion-select-option>
+          <ion-select-option value="Switzerland">test</ion-select-option>
+          <ion-select-option value="Syria">test</ion-select-option>
+          <ion-select-option value="Taiwan">test</ion-select-option>
+          <ion-select-option value="Tajikistan">test</ion-select-option>
+          <ion-select-option value="Tanzania">test</ion-select-option>
+          <ion-select-option value="Thailand">test</ion-select-option>
+          <ion-select-option value="Togo">test</ion-select-option>
+          <ion-select-option value="Tonga">test</ion-select-option>
+          <ion-select-option value="Trinidad & Tobago">test</ion-select-option>
+          <ion-select-option value="Tunisia">test</ion-select-option>
+          <ion-select-option value="Turkey">test</ion-select-option>
+          <ion-select-option value="Turkmenistan">test</ion-select-option>
+          <ion-select-option value="Tuvalu">test</ion-select-option>
+          <ion-select-option value="Uganda">test</ion-select-option>
+          <ion-select-option value="Ukraine">test</ion-select-option>
+          <ion-select-option value="United Arab Emirates">test</ion-select-option>
+          <ion-select-option value="United Kingdom">test</ion-select-option>
+          <ion-select-option value="Uruguay">test</ion-select-option>
+          <ion-select-option value="Uzbekistan">test</ion-select-option>
+          <ion-select-option value="Vanuatu">test</ion-select-option>
+          <ion-select-option value="Vatican City">test</ion-select-option>
+          <ion-select-option value="Venezuela">test</ion-select-option>
+          <ion-select-option value="Vietnam">test</ion-select-option>
+          <ion-select-option value="Yemen">test</ion-select-option>
+          <ion-select-option value="Zambia">test</ion-select-option>
+          <ion-select-option value="Zimbabwe">test</ion-select-option>
+        </ion-select>
         <ion-text class="ion-padding-bottom" slot="error" *ngIf="!country.valid && (!country.pristine || hubspotForm.submitted)">Country is required</ion-text>
+      </ion-item>
+      <ion-item>
+        <ion-label>State</ion-label>
+        <ion-input placeholder="United States" [(ngModel)]="hubspotData.state" name="state" #state="ngModel"></ion-input>
+      </ion-item>
+    </ion-list>
+    <ion-list-header>Preferences</ion-list-header>
+    <ion-list [inset]="true">
+      <ion-item>
+        <ion-label>T-shirt Size</ion-label>
+        <ion-select [(ngModel)]="hubspotData.t_shirt_size" value="Small" name="tshirt" okText="Okay" cancelText="Dismiss" required>
+          <ion-select-option value="Small">Small</ion-select-option>
+          <ion-select-option value="Medium">Medium</ion-select-option>
+          <ion-select-option value="Large">Large</ion-select-option>
+          <ion-select-option value="X-Large">X-Large</ion-select-option>
+          <ion-select-option value="2X- Large">2X-Large</ion-select-option>
+        </ion-select>
       </ion-item>
     </ion-list>
   </form>
