--- a/src/app/pages/swag/swag.page.html
+++ b/src/app/pages/swag/swag.page.html
@@ -17,7 +17,7 @@
     <ion-card-header>
       <img src="assets/raffle.png" />
 
-      <ion-card-title>EAS Swag</ion-card-title>
+      <ion-card-title><strong>EAS Swag</strong></ion-card-title>
       <ion-card-subtitle>Enter your info for a change to get free Ionic and EAS21 swag.</ion-card-subtitle>
     </ion-card-header>
 
