--- a/src/app/pages/tab1/agenda-item/agenda-item.page.scss
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.scss
@@ -57,4 +57,5 @@ ion-list.list-inset {
 
 ion-item.watch-live {
   --color: var(--ion-color-primary);
+  --border-color: var(--ion-color-step-200);
 }
