fix(swag): spelling

--- a/src/app/pages/swag/swag.page.html
+++ b/src/app/pages/swag/swag.page.html
@@ -18,7 +18,7 @@
       <img src="assets/raffle.png" />
 
       <ion-card-title><strong>EAS Swag</strong></ion-card-title>
-      <ion-card-subtitle>Enter your info for a change to get free Ionic and EAS21 swag.</ion-card-subtitle>
+      <ion-card-subtitle>Enter your info for a chance to win free Ionic and EAS21 swag.</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
