--- a/src/app/components/speaker-card/speaker-card.component.scss
+++ b/src/app/components/speaker-card/speaker-card.component.scss
@@ -14,6 +14,20 @@ ion-card {
   aspect-ratio: 1 / 1;
 }
 
+@supports not (aspect-ratio: 1 / 1) {
+  ion-card::before {
+    float: left;
+    padding-top: 100%;
+    content: '';
+  }
+
+  ion-card::after {
+    display: block;
+    content: '';
+    clear: both;
+  }
+}
+
 ion-card-header {
   position: absolute;
   bottom: 0;
