--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -42,8 +42,11 @@
 
   <ion-list-header class="eas-header-small">Watch</ion-list-header>
   <ion-list [inset]="true">
-    <ion-item [button]="true" [detail]="false" lines="none" class="watch-live">
-      <ion-label>Watch live at ionic.io/events</ion-label>
+    <ion-item [detail]="false" lines="none" class="watch-live">
+      <ion-label>Watch live at <a href="https://ionic.io/events" target="_blank">this link here</a></ion-label>
+    </ion-item>
+    <ion-item [button]="true" (click)="triggerBrowser()" lines="none">
+      <ion-label>in app browser</ion-label>
     </ion-item>
     <ion-item [button]="true" (click)="setReminder(agendaItem)" lines="none">
       <ion-label>Remind Me</ion-label>
