feat(speakers): Update speaker pics and talk details

--- a/src/app/components/sponsor-view/sponsor-view.component.html
+++ b/src/app/components/sponsor-view/sponsor-view.component.html
@@ -11,7 +11,7 @@
     <h2 class="eas-header-large">About {{ sponsor.name }}</h2>
     <ion-text>{{ sponsor.biography }}</ion-text><br /><br />
 
-    <h2 class="eas-header-large">Connect with {{ sponsor.name }}</h2>
+    <!-- <h2 class="eas-header-large">Connect with {{ sponsor.name }}</h2>
     <ion-button color="light" class="connect-button">
       <div>
         <ion-icon name="logo-linkedin"></ion-icon><br />
@@ -31,6 +31,6 @@
         <ion-icon name="logo-twitter" size="large"></ion-icon><br />
         <ion-label>Twitter</ion-label>
       </div>
-    </ion-button>
+    </ion-button> -->
   </div>
 </ion-content>
