--- a/src/app/components/sponsor-card/sponsor-card.component.html
+++ b/src/app/components/sponsor-card/sponsor-card.component.html
@@ -4,7 +4,7 @@
   }"
   [button]="button"
   [style.--background]="sponsor.accentColor"
-  (click)="presentModal()"
+  (click)="openLink(sponsor.homepage)"
 >
   <img [src]="sponsor.logoUrl" />
 </ion-card>
