--- a/src/app/components/speaker-view/speaker-view.component.html
+++ b/src/app/components/speaker-view/speaker-view.component.html
@@ -11,26 +11,26 @@
     <h2 class="eas-header-large">About {{ speaker.firstName }}</h2>
     <ion-text>{{ speaker.biography }}</ion-text><br /><br />
 
-    <!-- <h2 class="eas-header-large">Connect with {{ speaker.firstName }}</h2>
-    <ion-button color="light" class="connect-button">
+    <h2 class="eas-header-large">Connect with {{ speaker.firstName }}</h2>
+    <ion-button color="light" class="connect-button" (click)="openLink(speaker.linkedin)" *ngIf="speaker.linkedin">
       <div>
         <ion-icon name="logo-linkedin"></ion-icon><br />
         <ion-label>LinkedIn</ion-label>
       </div>
     </ion-button>
 
-    <ion-button color="light" class="connect-button">
+    <ion-button color="light" class="connect-button" (click)="openLink(speaker.github)" *ngIf="speaker.github">
       <div>
         <ion-icon name="logo-github"></ion-icon><br />
         <ion-label>GitHub</ion-label>
       </div>
     </ion-button>
 
-    <ion-button color="light" class="connect-button">
+    <ion-button color="light" class="connect-button" (click)="openLink(speaker.twitter)" *ngIf="speaker.twitter">
       <div>
         <ion-icon name="logo-twitter" size="large"></ion-icon><br />
         <ion-label>Twitter</ion-label>
       </div>
-    </ion-button> -->
+    </ion-button>
   </div>
 </ion-content>
