--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,6 +1,10 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="home">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="agenda">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Agenda</ion-label>
