--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,12 +4,30 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="page-content">
   <ion-list-header class="eas-header-small">Explore</ion-list-header>
+
+  <ion-card
+  (click)="navigateToAgendaItemPage()"
+  [button]="true">
+  <ion-card-header>
+    <ion-card-title clas="eas-header-small"></ion-card-title>
+    <ion-card-subtitle>Agenda
+    </ion-card-subtitle>
+  </ion-card-header>
+  <ion-card-content>Browse all the scheduled </ion-card-content>
+</ion-card>
+
   <ion-list [inset]="true" class="when-list">
     <ion-item  lines="none">
       <ion-label>
         Agenda<br />
+        <ion-note>Browse all the scheduled presentations and talks for the event on December 8th</ion-note>
+      </ion-label>
+    </ion-item>
+    <ion-item  lines="none">
+      <ion-label>
+        Speakers<br />
         <ion-note>Browse all the scheduled presentations and talks for the event on December 8th</ion-note>
       </ion-label>
     </ion-item>
