--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -16,7 +16,7 @@
     <h1>{{ agendaItem.title }}</h1>
     <h2>
       <div *ngFor="let speaker of speakers">
-        {{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ company.name }}
+        {{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ getCompanyName(speaker.companyId) }}
       </div>
     </h2>
   </div>
