--- a/src/app/components/agenda-card/agenda-card.component.html
+++ b/src/app/components/agenda-card/agenda-card.component.html
@@ -7,7 +7,7 @@
     <ion-card-title clas="eas-header-small">{{ agenda.title }}</ion-card-title>
     <ion-card-subtitle>
       <div *ngFor="let speaker of speakers">
-        {{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ company.name }}
+        {{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ getCompanyName(speaker.companyId) }}
       </div>
       </ion-card-subtitle>
   </ion-card-header>
