--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -41,7 +41,7 @@
   <ion-list-header class="eas-header-small">Watch</ion-list-header>
   <ion-list [inset]="true">
     <ion-item [detail]="false" lines="none" class="watch-live" (click)="triggerBrowser()">
-      <ion-label>Watch live at ionic.io/events</ion-label>
+      <ion-label>Watch live at ionic.io/events/enterprise-app-summit-21</ion-label>
     </ion-item>
     <ion-item (click)="setReminder(agendaItem)" lines="none">
       <ion-label>Remind Me</ion-label>
