Typpo on country
Typpo on country "Portugal"

--- a/src/app/components/swag-modal/swag-modal.page.html
+++ b/src/app/components/swag-modal/swag-modal.page.html
@@ -206,7 +206,7 @@
           <ion-select-option value="Peru">Peru</ion-select-option>
           <ion-select-option value="Philippines">Philippines</ion-select-option>
           <ion-select-option value="Poland">Poland</ion-select-option>
-          <ion-select-option value="Portugal">Portual</ion-select-option>
+          <ion-select-option value="Portugal">Portugal</ion-select-option>
           <ion-select-option value="Puerto Rico">Puerto Rico</ion-select-option>
           <ion-select-option value="Qatar">Qatar</ion-select-option>
           <ion-select-option value="Romania">Romania</ion-select-option>
