update(app): Update to v6 final and remove swag entry

--- a/src/app/pages/swag/swag.page.html
+++ b/src/app/pages/swag/swag.page.html
@@ -22,7 +22,7 @@
     </ion-card-header>
 
     <ion-card-content>
-      <ion-button expand="block" (click)="openSwagModal()">Enter to Win</ion-button>
+      <p>Note: Entries for the swag raffle are now closed.</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
