(feat) add auth login via web with current window

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -99,7 +99,8 @@
   /** light **/
   --ion-color-light: #f4f5f8;
   --ion-color-light-rgb: 244, 245, 248;
-  --ion-color-light-contrast: #000000;
+  --ion-color-light-contrast: var(--ion-color-primary);
+  
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
