--- a/src/app/pages/swag/swag.page.html
+++ b/src/app/pages/swag/swag.page.html
@@ -1,6 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Swag</ion-title>
+    <ion-button (click)="signOut()" fill="clear" slot="end">Sign Out</ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -8,6 +9,7 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Swag</ion-title>
+      
     </ion-toolbar>
   </ion-header>
 
