--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -13,9 +13,9 @@
       <ion-icon name="star"></ion-icon>
       <ion-label>Sponsors</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="swag">
-      <ion-icon name="shirt"></ion-icon>
-      <ion-label>Swag</ion-label>
+    <ion-tab-button tab="profile">
+      <ion-icon name="person"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
