(fix) logout and login

--- a/src/app/pages/auth-transition/auth-transition.page.scss
+++ b/src/app/pages/auth-transition/auth-transition.page.scss
@@ -1,3 +1,10 @@
 ion-content {
-    --background: var(--ion-color-primary);
+    --background: var(--ion-color-light);
+}
+
+.center {
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
