--- a/src/app/pages/auth-transition/auth-transition.page.html
+++ b/src/app/pages/auth-transition/auth-transition.page.html
@@ -1,2 +1,5 @@
 <ion-content>
+    <div class="center">
+        <ion-spinner color="dark" name="crescent"></ion-spinner>
+    </div>
 </ion-content>
