feat: move data to api

--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="page-content" [fullscreen]="true">
+<ion-content class="page-content" *ngIf="agendaItem" [fullscreen]="true">
   <div class="header ion-padding">
 
     <div class="avatars">
