feat: add user info

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
     <ion-img (ionImgDidLoad)="showLogo = true" [src]="isDark ? 'assets/ionic-dark.svg' : 'assets/ionic.svg'" class="logo">
     </ion-img>
     <ion-text color="dark">
-      <h2>Enterprise Summit</h2>
+      <h2>Conference App</h2>
       <h2>&nbsp;</h2>
     </ion-text>
 
