--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -12,12 +12,12 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-list-header class="ion-padding-top ion-padding-start ion-padding-end eas-header-large">Ionic Developer</ion-list-header>
+  <ion-list-header class="ion-padding-top ion-padding-start ion-padding-end eas-header-large">{{name}}</ion-list-header>
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title><strong>John Smith</strong></ion-card-title>
-      <ion-card-subtitle>You are part of the Ionic organization.</ion-card-subtitle>
+      <ion-card-title><strong>You are part of the Ionic organization</strong></ion-card-title>
+      <ion-card-subtitle>Your unique id for this app is {{id}}.</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
