update text for live update demo

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -251,7 +251,7 @@
     --ion-color-step-700: #b8b8b8;
     --ion-color-step-750: #c4c4c4;
     --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #ffffff;
+    --ion-color-step-850: #;
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
