text change for LU demo

--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -21,7 +21,7 @@
     </h2>
   </div>
 
-  <ion-list-header class="eas-header-small">About this speech</ion-list-header>
+  <ion-list-header class="eas-header-small">About this talk</ion-list-header>
   <ion-list [inset]="true" class="description-list">
     <ion-item lines="none">
       <ion-text class="ion-padding-top ion-padding-bottom" [innerHtml]="agendaItem.description"></ion-text>
